samples/_failures_safe/1761488973_80440c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da8bb371.c: In function ‘main’:
./samples/SAFE/__tmp_da8bb371.c:145:12: error: missing terminating " character
  145 |     printf("\nSum of elements in A
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_da8bb371.c:145:5: error: expected expression at end of input
  145 |     printf("\nSum of elements in A
      |     ^~~~~~
./samples/SAFE/__tmp_da8bb371.c:145:5: error: expected declaration or statement at end of input
